--- a/{{cookiecutter.component_id}}/catalog-info.yaml
+++ b/{{cookiecutter.component_id}}/catalog-info.yaml
@@ -5,8 +5,9 @@ metadata:
   description: {{cookiecutter.description | jsonify}}
   annotations:
     github.com/project-slug: {{cookiecutter.destination.git.owner + "/" + cookiecutter.destination.git.name}}
+    backstage.io/techdocs-ref: url:{{cookiecutter.storePath}}
     backstage.io/kubernetes-id: {{cookiecutter.component_id}}
 spec:
-  type: library
+  type: service
   lifecycle: experimental
   owner: {{cookiecutter.owner | jsonify}}
