--- a/{{cookiecutter.component_id}}/catalog-info.yaml
+++ b/{{cookiecutter.component_id}}/catalog-info.yaml
@@ -8,6 +8,6 @@ metadata:
     backstage.io/techdocs-ref: url:{{cookiecutter.storePath}}
     backstage.io/kubernetes-id: {{cookiecutter.component_id}}
 spec:
-  type: service
+  type: library
   lifecycle: experimental
   owner: {{cookiecutter.owner | jsonify}}
