Move test value in to template.

--- a/{{cookiecutter.component_id}}/.github/workflows/build.yml
+++ b/{{cookiecutter.component_id}}/.github/workflows/build.yml
@@ -18,6 +18,6 @@ jobs:
     - name: Checkout Source
       uses: actions/checkout@v2
     - name: Install Dependencies
-      run: ./install-dev-dependencies.sh
+      run: ./install-dev-dependencies.sh SETTING=VALUE
     - name: Build
       run: $flex build
