--- a/service_config.yml
+++ b/service_config.yml
@@ -1,8 +1,7 @@
-build:
-  command: echo "No build workflow yet"
-test:
-  command: ./test-create-java-kotlin-library.sh
 flex:
-  version: 0.10.4
+  version: 0.2.5
+  workflows:
+    test:
+      command: ./test-create-java-kotlin-library.sh
 service:
   name: template-java-kotlin-library
