--- a/{{cookiecutter.component_id}}/.github/workflows/build.yml
+++ b/{{cookiecutter.component_id}}/.github/workflows/build.yml
@@ -12,14 +12,13 @@ jobs:
     runs-on: ubuntu-20.04
 
     env:
-      flex: "./.devx-workflows/flex"
+      flex: flex.sh
 
     steps:
     - name: Checkout Source
       uses: actions/checkout@v2
-
-    - name: Install Dependencies
-      run: ./install-dev-dependencies.sh
+      with:
+        fetch-depth: 0
 
     - name: Build
       run: $flex build
