--- a/{{cookiecutter.component_id}}/.github/workflows/build.yml
+++ b/{{cookiecutter.component_id}}/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-20.04
 
     env:
-      flex: flex.sh
+      flex: ./flex.sh
 
     steps:
     - name: Checkout Source
