--- a/{{cookiecutter.component_id}}/service_config.yml
+++ b/{{cookiecutter.component_id}}/service_config.yml
@@ -1,7 +1,9 @@
 flex:
-  version: 0.2.5
+  version: 0.2.6
   workflows:
     build:
       command: ./gradlew build
+    update-template:
+      command: battenberg upgrade --no-input
 service:
   name: '{{cookiecutter.component_id}}'
