--- a/{{cookiecutter.component_id}}/service_config.yml
+++ b/{{cookiecutter.component_id}}/service_config.yml
@@ -1,6 +1,11 @@
 flex:
   version: 0.5.1
   workflows:
+    setup-depdendencies:
+      command: pip install battenberg
+    initialize-template:
+      depends-on: setup-dependencies
+      command: if ! [[ "$(git branch)" =~ "template" ]]; then battenberg install https://github.com/fp-mt-test-org/template-java-kotlin-library; fi
     build:
       command: ./gradlew build
     update-template:
