--- a/{{cookiecutter.component_id}}/service_config.yml
+++ b/{{cookiecutter.component_id}}/service_config.yml
@@ -5,7 +5,7 @@ flex:
       command: pip3 install battenberg
     initialize-template:
       depends-on: setup-dependencies
-      command: if ! [[ "$(git branch)" =~ "template" ]]; then battenberg install https://github.com/fp-mt-test-org/template-java-kotlin-library; fi
+      command: if ! [[ "$(git branch)" =~ "template" ]]; then { echo "yes" } | battenberg install https://github.com/fp-mt-test-org/template-java-kotlin-library; fi
     build:
       command: ./gradlew build
     update-template:
