fix: Adds dependency on setup-dependencies to the update-template workflow since it's dependant.

--- a/{{cookiecutter.component_id}}/service_config.yml
+++ b/{{cookiecutter.component_id}}/service_config.yml
@@ -6,6 +6,7 @@ flex:
     build:
       command: ./gradlew build
     update-template:
+      depends-on: setup-dependencies
       command: battenberg upgrade --no-input
 service:
   name: '{{cookiecutter.component_id}}'
