--- a/{{cookiecutter.component_id}}/.github/workflows/build.yml
+++ b/{{cookiecutter.component_id}}/.github/workflows/build.yml
@@ -20,5 +20,8 @@ jobs:
       with:
         fetch-depth: 0
 
+    - name: Initialize Template
+      run: $flex initialize-template
+
     - name: Build
       run: $flex build
