--- a/{{cookiecutter.component_id}}/service_config.yml
+++ b/{{cookiecutter.component_id}}/service_config.yml
@@ -3,13 +3,14 @@ flex:
   workflows:
     setup-dependencies:
       command: pip3 install battenberg
-    initialize-template:
+    setup-repo:
       depends-on: setup-dependencies
-      command: github_base_url=https://github.com/fp-mt-test-org template_name=template-java-kotlin-library project_name={{cookiecutter.component_id}} owner_name=fp-mt-test-org ./initialize-template.sh
+      command: ./.ngif/setup-repo.sh
     update-template:
       depends-on: setup-dependencies
       command: battenberg upgrade --no-input
     build:
+      depends-on: setup-repo
       command: ./gradlew build
 service:
   name: '{{cookiecutter.component_id}}'
