--- a/{{cookiecutter.component_id}}/service_config.yml
+++ b/{{cookiecutter.component_id}}/service_config.yml
@@ -5,7 +5,7 @@ flex:
       command: pip3 install battenberg
     setup-repo:
       depends-on: setup-dependencies
-      command: owner_name={{cookiecutter.repo_owner}} project_name={{cookiecutter.component_id}} ./.ngif/setup-repo.sh
+      command: github_base_url=https://github.com/fp-mt-test-org owner_name={{cookiecutter.repo_owner}} project_name={{cookiecutter.component_id}} ./.ngif/setup-repo.sh
     update-template:
       depends-on: setup-dependencies
       command: battenberg upgrade --no-input
