fix: Adds initial updates for publish.

--- a/{{cookiecutter.component_id}}/service_config.yml
+++ b/{{cookiecutter.component_id}}/service_config.yml
@@ -15,6 +15,8 @@ flex:
       command: battenberg upgrade --no-input
     build:
       depends-on: setup-repo
-      command: ./gradlew build
+      command: ./scripts/build.sh
+    publish:
+      command: ./scripts/publish.sh
 service:
   name: '{{cookiecutter.component_id}}'
